Add specs section to website, move old conical-gradients spec there, merge docs section into it

--- a/projects/index.njk
+++ b/projects/index.njk
@@ -11,7 +11,7 @@ includes: |
 
 <p>
 Please note that this mainly contains open source tools I’ve developed, and is only a subset of my work.
-It does not contain any of <a href="/standards/">my work designing web technologies</a>,
+It does not contain any of <a href="/specs/">my work designing web technologies</a>,
 <a href="https://w3.org/TR/design-principles">documenting web platform design principles</a> or doing design reviews for proposed web technologies
 as a <a href="https://en.wikipedia.org/wiki/Technical_Architecture_Group">W3C TAG</a> member,
 or any of my early entrepreneurial work (2005-2011).
