--- a/redirects.njk
+++ b/redirects.njk
@@ -36,3 +36,6 @@ eleventyExcludeFromCollections: true
 
 # Static file hosting without cluttering root
 /* /files/:splat 200
+
+/standards/* /specs/:splat 301
+/docs/* /specs/:splat 301
