--- a/specs/index.njk
+++ b/specs/index.njk
@@ -1,15 +1,16 @@
 ---
-title: Web Technologies
-includes: '<script type=module src="/assets/elements/bar-chart/bar-chart.js"></script><script type=module src="/assets/elements/time-line/time-line.js"></script>'
+title: Web Specs
+includes: '<script type=module src="/assets/elements/time-line/time-line.js"></script>'
 page_css: true
+override:tags: []
 ---
-{% import "standards/_partials.njk" as partials with context %}
+{% import "specs/_partials.njk" as partials with context %}
 
 
 <div class="nutshell">
-This section contains an overview of web technologies I have designed or helped design.
-It includes a list of proposals, their current status, and a timeline of their development.
-In addition to listing my body of work, I’m hoping it can provide insight into the process and timeline for new web technologies.
+This section contains an overview of web technologies I have designed, proposed, or significantly influenced.
+Each feature includes a complete timeline from proposal to shipping across browsers.
+Beyond listing my body of work, I’m hoping it can provide insight into the process and timeline of how the Web evolves.
 </div>
 
 <div class="note">
