--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -4,6 +4,7 @@
 @import url("bootstrap-icons.css");
 @import url("components/callouts.css");
 @import url("components/bar-chart.css");
+@import url("components/tables.css");
 
 *,
 *::before,
@@ -451,30 +452,6 @@ blockquote {
 			no-repeat bottom right 1em / auto min(8em, 80%)
 		color-mix(in lab, #fff0, var(--color) 4.5%) ;
 	font-style: italic;
-}
-
-table {
-	border-spacing: 0;
-	border-collapse: collapse;
-	margin-bottom: 1em;
-	background: white;
-
-	th, td {
-		border: 1px solid var(--color-gray-40a);
-		padding: .2rem .4rem;
-	}
-
-	th {
-		text-align: left;
-		font-size: 80%;
-		font-family: var(--font-sans);
-		background: var(--color-accent3);
-		color: white;
-	}
-
-	td {
-		font-variant-numeric: tabular-nums;
-	}
 }
 
 :target {
