--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -1075,8 +1075,8 @@ pre:is(pre, [class*="language-"][class*="language-"]) {
 	background: var(--color-accent2-light2);
 	overflow: visible;
 	font-size: 80%;
+	font-size: max(.8rem, 80%);
 	font-weight: 500;
-
 
 	&:where(main > *, .summary > *) {
 		--skew: .8em;
