--- a/assets/components/tables.css
+++ b/assets/components/tables.css
@@ -5,9 +5,8 @@ table {
 	width: stretch;
 	border-spacing: 0;
 	border-collapse: collapse;
-	margin-bottom: 1em;
+	margin-bottom: 1rem;
 	font-size: 80%;
-	/* background: white; */
 
 	.black, .dark {
 		color-scheme: dark;
@@ -27,26 +26,30 @@ table {
 }
 
 tr {
-	/* background: canvas; */
-	/* background: color-mix(in oklab, canvas 80%, oklab(none none none / 0%)); */
-	color: canvastext;
+	:where(.black, .dark) & {
+		background: canvas;
+		color: canvastext;
+	}
 }
 
 th, td {
 	border-block: 1px solid var(--color-gray-40a);
-	padding: .2rem .4rem;
+	padding-inline: .5rem;
+
+	> p:only-child {
+		display: contents;
+	}
 }
 
 th {
+	padding-block: .2rem;
 	font-family: var(--font-sans);
-	font-size: 90%;
-	/* background: var(--color-gray-95); */
 	--tint-amount: 25%;
-	text-align: left;
+	text-align: start;
 
 	:where(thead) & {
 		border-block-start: none;
-		border-block-end-width: .2em;
+		border-block-end: .15em solid var(--color-gray-60a);
 	}
 
 	:where(tbody) & {
@@ -94,8 +97,8 @@ th {
 	}
 }
 
-td {
+td, tbody th {
+	padding-block: .4rem;
 	font-variant-numeric: tabular-nums;
-	background: color-mix(in oklab, var(--color-tint) var(--tint-amount, 15%), oklab(none none none / 0%));
 	vertical-align: top;
 }
