--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 @import url("fonts.css");
 @import url("tokens.css");
 @import url("prism.css");
-@import url("bootstrap-icons.css");
+@import url("icons.css");
 @import url("components/callouts.css");
 @import url("components/bar-chart.css");
 @import url("components/tables.css");
