Use existing `--content-margin` variable rather than defining a new one

--- a/assets/components/figures.css
+++ b/assets/components/figures.css
@@ -55,7 +55,6 @@ figure {
 	}
 
 	&.float {
-		--page-margin: calc(50vw - var(--content-width) / 2);
 		--figure-max-width: calc(var(--content-width) / 2 - 2em);
 		--figure-min-width: 200px;
 
@@ -66,7 +65,7 @@ figure {
 
 		/* Margin */
 		--figure-clamped-width: clamp(var(--figure-min-width), 100%, var(--figure-max-width));
-		--figure-max-outset: calc(min(var(--figure-clamped-width), var(--page-margin)) - 1em);
+		--figure-max-outset: calc(min(var(--figure-clamped-width), var(--content-margin)) - 1em);
 		--figure-outset: min(3em, var(--figure-max-outset));
 
 		margin-inline: calc(-1 * var(--figure-outset)) 1em;
@@ -85,7 +84,7 @@ figure {
 		@media (width > 1200px) {
 			/* Place figure in margin if possible */
 			&.margin {
-				--figure-width: calc(var(--page-margin) - 2em);
+				--figure-width: calc(var(--content-margin) - 2em);
 				--figure-outset: var(--figure-max-outset);
 
 				max-width: var(--figure-clamped-width);
