--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -29,6 +29,7 @@
 
 	{% if image %}
 	<meta property="og:image" content="{{ image | absolutize(page.url) }}" />
+	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:image" content="{{ image | absolutize(page.url) }}" />
 	{% endif %}
 </head>
